# curiefense-akto-bridge

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
config/: curiefense-bridge.yaml
curiefense-config/json/: securitypolicy.json
curiefense-ffi/: Cargo.toml
curiefense-ffi/include/: curiefense_ffi.h
curiefense-ffi/src/: lib.rs
docs/: Akto-CF-README.en.md  Akto-CF-README.md  Curiefense-Akto-Bridge-Design-v3.0.md
src/: akto_adapter.cc  akto_adapter.h  alert_builder.cc  alert_builder.h  config.h  config_loader.cc  engine.cc  engine.h  main.cc  worker_pool.cc  worker_pool.h
tests/: test_akto_adapter.cc  test_alert_builder.cc
